separation of concerns

--- a/HERO Serial/HERO Serial/HERO Serial.csproj
+++ b/HERO Serial/HERO Serial/HERO Serial.csproj
@@ -32,8 +32,11 @@
   </PropertyGroup>
   <Import Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
   <ItemGroup>
+    <Compile Include="Gamepad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Serial.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="CTRE">
