--- a/HERO Serial/HERO Serial/HERO Serial.csproj
+++ b/HERO Serial/HERO Serial/HERO Serial.csproj
@@ -36,6 +36,7 @@
     <Compile Include="BucketLadder.cs" />
     <Compile Include="Control.cs" />
     <Compile Include="Drivetrain.cs" />
+    <Compile Include="Gamepad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Serial.cs" />
